# emmy-noether

./: Cargo.toml  LICENSE  README.md  cost.rs  lib.rs  noise.rs  telegate.rs  topology.rs
core/: Cargo.toml
core/src/: cost.rs  dd_synth.rs  hurst.rs  lib.rs  noise_gen.rs
examples/: qiskit_pass.py
pybindings/: Cargo.toml
pybindings/src/: lib.rs
